<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:padding="15dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dbProfileIcon"
        android:layout_width="45dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/profile"
        android:src="@drawable/ic_user_icon" />

    <SearchView
        android:id="@+id/dbSearchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/dbProfileIcon"
        android:autofillHints="Search"
        android:background="@drawable/rounded_corners"
        android:iconifiedByDefault="true"
        android:queryHint="Search" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dbSearchView"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stay_home"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stay_safe"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/btnHospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_hospital1"
                android:gravity="end|center_vertical"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/hospital"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_doctors"
                android:gravity="end|center_vertical"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp"
                android:text="@string/doctor"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/linearLayout2"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/btnEmergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_emergency"
                android:gravity="end|center_vertical"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/services"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnTestLab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_testlab"
                android:gravity="end|center_vertical"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/test_lab"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

        </LinearLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="20dp"
            android:background="@color/colorCard"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tvShow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/live_update"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_corona_virus"
                android:layout_below="@+id/tvShow"
                android:textSize="15sp"
                android:textColor="@color/colorWhiteLight"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/togo"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:background="@drawable/rounded_arrow_corner"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv1"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingBottom="20dp"
            android:background="@color/colorSymptoms">

            <TextView
                android:id="@+id/tvSymptoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_nabout_corona"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btnSymptoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learn_more"
                android:layout_below="@+id/tvSymptoms"
                android:layout_marginTop="20dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_buttons"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_cough" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>