<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".SymptomsPrecaution">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tool_updates_imageview">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:foregroundGravity="center"
            app:lottie_autoPlay="true"
            app:lottie_fileName="top.json"
            app:lottie_loop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symptoms"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSeeMore1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:text="@string/see_details"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorSymptoms1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="cough.json"
                        app:lottie_loop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lottie1"
                        android:layout_centerHorizontal="true"
                        android:text="@string/cough"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorSymptoms1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="fever.json"
                        app:lottie_loop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lottie2"
                        android:layout_centerHorizontal="true"
                        android:text="@string/fever"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorSymptoms1">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottie3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="headache.json"
                        app:lottie_loop="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lottie3"
                        android:layout_centerHorizontal="true"
                        android:text="@string/headache"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prevention"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSeeMore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:text="@string/see_details"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/lottie4"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_alignParentStart="true"
                            app:lottie_autoPlay="true"
                            app:lottie_fileName="wearmask.json"
                            app:lottie_loop="true" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/lottie4"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvHead"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wear_face_mask"
                                android:textColor="@color/colorHeadPrecaution"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/mask_info"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/lottie5"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_alignParentStart="true"
                            app:lottie_autoPlay="true"
                            app:lottie_fileName="handsanitizer.json"
                            app:lottie_loop="true" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/lottie5"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvHead1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/wash_hands_often"
                                android:textColor="@color/colorHeadPrecaution"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wash_info"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/lottie6"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_alignParentStart="true"
                            app:lottie_autoPlay="true"
                            app:lottie_fileName="socialdistancing.json"
                            app:lottie_loop="true" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/lottie6"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvHead3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/maintain_social_distancing"
                                android:textColor="@color/colorHeadPrecaution"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/distancing_info"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/lottie7"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_alignParentStart="true"
                            app:lottie_autoPlay="true"
                            app:lottie_fileName="ill.json"
                            app:lottie_loop="true" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/lottie7"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvHead4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/if_ill"
                                android:textColor="@color/colorHeadPrecaution"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/ill_info"
                                android:textSize="13sp" />
                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>

</RelativeLayout>